# pxqr.github.io

./: .gitignore  .gitmodules  .travis.yml  404.html  CNAME  README.md  about.html  about.md  archive.html  atom.xml  blog.cabal  config  deploy.sh  humans.txt  index.html  message.txt  message.txt.asc  opensearch.xml  robots.txt  sitemap.xml
articles/: 2014-06-10-adding-post-navigation.html  2014-09-08-harris-corner-detector.html
assets/: .gitignore
assets/css/: default.css  default.scss
assets/img/: README.md
content/: LICENSE.md  README.md
content/images/: README.md
css/: default.css  default.scss
favigen/: README.md  mkicon.sh
generator/: Main.hs  Pager.hs  blog.cabal
generator-favicon/: grid.hs  lambda.hs
meta/: README.md  humans.txt  opensearch.xml
pages/: 404.html  index.html
posts/: 2014-06-10-adding-post-navigation.html  2014-06-10-adding-post-navigation.md  2014-09-08-harris-corner-detector.html  2014-09-08-harris-corner-detector.lhs
src/: Main.hs
tags/: CV.html  Hakyll.html  Pandoc.html  Repa.html  cv.html  draft.html  hakyll.html  pandoc.html
templates/: archive.html  article-discussion.html  article-list.html  article-pager.html  article-preview.html  article.html  base.html  default.html  google-analytics.html  opengraph.html  post-list.html  post.html  tags.html  twitter-card.html
