name:                  blog
version:               0.1.0.0
synopsis:              pxqr's blog
homepage:              https://bitbucket.org/pxqr/blog
bug-reports:           https://bitbucket.org/pxqr/blog/issues
license:               BSD3
license-file:          src/LICENSE
author:                Sam Truzjan
maintainer:            pxqr.sta@gmail.com
category:              Web
build-type:            Simple
cabal-version:         >= 1.8

extra-source-files:
  README.md
  src/LICENSE

  css/default.scss
  index.html
  about.html
  images/.keep
  posts/.keep
  templates/archive.html
  templates/default.html
  templates/post-list.html
  templates/post.html


source-repository head
  type:                git
  location:            git@bitbucket.org:pxqr/blog.git
  branch:              master

executable blog
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base       == 4.6.*
                     , hakyll
