name:                  blog
version:               0.1.0.0
synopsis:              pxqr's blog
homepage:              https://bitbucket.org/pxqr/blog
bug-reports:           https://bitbucket.org/pxqr/blog/issues
license:               BSD3
license-file:          src/LICENSE
author:                Sam Truzjan
maintainer:            pxqr.sta@gmail.com
category:              Web
build-type:            Simple
cabal-version:         >= 1.8

extra-source-files:
  README.md
  src/LICENSE

  favicon.ico
  favigen/README.md
  favigen/grid.hs
  favigen/lambda.hs
  favigen/mkicon.sh

  humans.txt
  robots.txt
  sitemap.xml

  css/default.scss
  index.html
  about.md
  images/.keep
  posts/.keep
  templates/archive.html
  templates/default.html
  templates/post-list.html
  templates/post.html


source-repository head
  type:                git
  location:            git@bitbucket.org:pxqr/blog.git
  branch:              master

executable blog
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base       == 4.6.*
                     , pandoc-types
                     , hakyll
