name:                  blog
version:               0.1.0.0
synopsis:              pxqr's blog
homepage:              https://github.com/pxqr/blog
bug-reports:           https://github.com/pxqr/blog/issues
license:               BSD3
license-file:          LICENSE
author:                Samvel Truzyan
maintainer:            pxqr.sta@gmail.com
category:              Web
build-type:            Simple
cabal-version:         >= 1.8

source-repository head
  type:                git
  location:            git@github.com:pxqr/pxqr.github.io.git
  branch:              master

executable blog
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base       >= 4.5
                     , unordered-containers
                     , text
                     , configurator

                     , blaze-html
                     , pandoc-types
                     , pandoc
                     , hakyll
